[gd_scene load_steps=3 format=3 uid="uid://bqx8h7lam2n3o"]

[ext_resource type="Script" uid="uid://dhfpr4sh0ovln" path="res://scripts/LauncherUI.gd" id="1_0h8k9"]
[ext_resource type="Script" uid="uid://cvqfnguoxwt3" path="res://addons/AdmobPlugin/Admob.gd" id="2_xdu5s"]

[node name="LauncherUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0h8k9")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.2, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Troll Launcher"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "üöÄ ƒêang kh·ªüi ƒë·ªông..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer"]
layout_mode = 2

[node name="LoadingAnimation" type="AnimationPlayer" parent="VBoxContainer"]
autoplay = "loading"

[node name="Admob" type="Node" parent="VBoxContainer"]
script = ExtResource("2_xdu5s")
debug_application_id = "ca-app-pub-53720886101914"
debug_banner_id = "ca-app-pub-3940256099942544/9214589741"
metadata/_custom_type_script = "uid://cvqfnguoxwt3"
