extends Control

# LauncherUI - Giao diá»‡n chÃ­nh cá»§a Launcher
# Chá»©c nÄƒng: Hiá»ƒn thá»‹ loading, progress update, error messages

@onready var status_label = $VBoxContainer/StatusLabel
@onready var progress_bar = $VBoxContainer/ProgressBar
@onready var loading_animation = $VBoxContainer/LoadingAnimation

var is_updating = false

func _ready():
	print("ğŸ¨ LauncherUI khá»Ÿi Ä‘á»™ng...")
	# âœ… Kiá»ƒm tra náº¿u cÃ³ file cá» update
	if FileAccess.file_exists("user://update_ready.flag"):
		print("ğŸš€ CÃ³ file cáº­p nháº­t sáºµn, load game luÃ´n!")
		load_game_content()
		return

# ğŸ”§ Náº¿u cÃ³ file .pck nhÆ°ng chÆ°a load, cá»‘ load láº¡i (phÃ²ng khi Android khÃ´ng restart)
	if FileAccess.file_exists("user://Game_Troll_Vi_en_lastest.pck"):
		print("ğŸ“¦ PhÃ¡t hiá»‡n file game .pck â€” load thá»­ ngay")
		load_game_content()
		return

	setup_ui()
	connect_signals()

func load_game_content():
	var pck_path = "user://Game_Troll_Vi_en_lastest.pck"
	if ProjectSettings.load_resource_pack(pck_path):
		print("ğŸ“¦ ÄÃ£ load pack, khá»Ÿi Ä‘á»™ng game content...")
		var main_scene = load("res://scenes/GameSceneUI/StartUI.tscn")
		if main_scene:
			get_tree().change_scene_to_packed(main_scene)
	else:
		print("âš ï¸ KhÃ´ng thá»ƒ load pack. Tiáº¿p tá»¥c launcher.")

func setup_ui():
	status_label.text = "ğŸš€ Äang khá»Ÿi Ä‘á»™ng Launcher..."
	progress_bar.visible = false
	loading_animation.play("loading")

func connect_signals():
	# Káº¿t ná»‘i vá»›i LauncherManager
	LauncherManager.launcher_ready.connect(_on_launcher_ready)
	LauncherManager.update_completed.connect(_on_update_completed)
	LauncherManager.game_loaded.connect(_on_game_loaded)
	
	# Káº¿t ná»‘i vá»›i UpdateChecker
	UpdateChecker.download_progress.connect(_on_download_progress)
	UpdateChecker.update_failed.connect(_on_update_failed)

func _on_launcher_ready():
	print("âœ… Launcher Ä‘Ã£ sáºµn sÃ ng")
	status_label.text = "ğŸ” Äang kiá»ƒm tra cáº­p nháº­t..."

func show_update_progress():
	print("ğŸ”„ Hiá»ƒn thá»‹ progress cáº­p nháº­t")
	is_updating = true
	progress_bar.visible = true
	progress_bar.value = 0
	status_label.text = "ğŸ”„ Äang táº£i cáº­p nháº­t..."

func _on_download_progress(percent: int):
	if is_updating:
		progress_bar.value = percent
		status_label.text = "â¬‡ï¸ Äang táº£i... " + str(percent) + "%"

func _on_update_completed():
	print("âœ… Cáº­p nháº­t hoÃ n thÃ nh")
	is_updating = false
	progress_bar.visible = false
	status_label.text = "âœ… Cáº­p nháº­t thÃ nh cÃ´ng! Äang khá»Ÿi Ä‘á»™ng game..."

func _on_game_loaded():
	print("ğŸ® Game Ä‘Ã£ Ä‘Æ°á»£c load")
	status_label.text = "ğŸ® ChÃ o má»«ng Ä‘áº¿n vá»›i Troll Game!"

func _on_update_failed(error_message: String):
	print("âŒ Cáº­p nháº­t tháº¥t báº¡i: ", error_message)
	is_updating = false
	progress_bar.visible = false
	status_label.text = "âš ï¸ Cáº­p nháº­t tháº¥t báº¡i. Äang load game..."

func show_error(message: String):
	status_label.text = "âŒ Lá»—i: " + message
	print("âŒ UI Error: ", message)
